# yera-early-access

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/: Cybersecurity Report Log.ipynb  Widget Builder Demo.ipynb
demos/data/cybersecurity/: cybersecurity-email-2.md  cybersecurity-email-3.md  cybersecurity-email-4.md  cybersecurity-email-6.md
example_agents/: basic_chatbot.py  widget_builder.py
example_agents/chat_components/await_agent/: action.py  spinner.py
example_agents/chat_components/exit/: failure.py  success.py
example_agents/chat_components/informational/: markdown.py  table.py
example_agents/chat_components/layout/: columns.py  container.py  form.py
example_agents/chat_components/user_input/: buttons.py  date_picker.py  slider.py  text_input.py
tutorials/: Basic Chatbot.ipynb  Entity Recognition Demo.ipynb
tutorials/data/articles/: bbc-news-1.txt  bbc-news-2.txt  bbc-news-3.txt  cybersecurity-email-1.md  cybersecurity-email-5.md  cybersecurity-email-8.md  cybersecurity-email-9.md  cybersecurity-report.md  demo-1.txt  demo-2.txt  demo-3.txt  demo-4.txt  wiki-1.txt  wiki-2.txt
