[project]
name = "yera-early-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "ollama>=0.6.1",
    "pyvis>=0.3.2",
    "yera>=0.2.9",
]

[dependency-groups]
llama-cpp = ["yera[llama-cpp]"]
ollama = ["yera[ollama]"]